--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
-    <title>Mini Profile - Free Bootstrap CSS Template</title>
+    <title>Edwin Adjei - Portfolio Site</title>
     
 <!--
 Mini Profile Template
@@ -25,8 +25,25 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Black transparent bg -->
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
-                <h1 class="tm-brand-name">Mini Profile</h1>
-                <p class="tm-brand-description mb-0">simple parallax template</p>
+                <h1 class="tm-brand-name">Edwin Adjei</h1>
+                <p class="tm-brand-description mb-0">Full Stack Developer</p>
+                <div class="mt-4">
+                  <a href="https://facebook.com" target="_blank" class="tm-social-icon">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                  <a href="https://twitter.com" target="_blank" class="tm-social-icon">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                  <a href="https://instagram.com" target="_blank" class="tm-social-icon">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                  <a href="https://linkedin.com" target="_blank" class="tm-social-icon">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                  <a href="https://github.com" target="_blank" class="tm-social-icon">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -38,24 +55,26 @@ https://templatemo.com/tm-530-mini-profile
           <div class="row h-100">
             <!-- Welcome Text -->
             <!-- White transparent bg -->
-            <div class="col-md-7 tm-welcome-left-col">
+            <div class="col-md-8 tm-welcome-left-col">
               <div class="tm-welcome-left">
-                <h2 class="tm-welcome-title">Welcome to Mini Profile Page</h2>
+                <h2 class="tm-welcome-title">Mastery in Motion: My Portfolio</h2>
                 <p class="pb-0">
-                  This is Bootstrap v4.3.1 parallax layout for you. Credit goes to <a rel="nofollow" href="https://www.pexels.com">Pexels</a> for 2 background images. In
-                  odio sapien, commodo id ullamcorper ac, dignissim at sapien.
-                  Nullam leo massa, vaius ac massa et, tincidunt imperdiet
-                turpis. </p>
+                  Hey, I’m a full-stack developer with 4 years of freelancing, building cool apps, websites, and more with JavaScript (TypeScript, React, Next, Electron, React Native, Node/Express), Python (Tkinter, PyQt6, Django), and databases like MongoDB, Supabase, and SQL—plus Git and GitHub for version control. I work part-time at AJXT - Technology & Agriculture and once mentored coders as Assistant Academic Head at Openlabs IT School. From a creative vibe, I craft user-friendly tech that turns your ideas into reality. I charge fair, deliver big, and enjoy Afrobeat when I’m not coding. Let’s create something dope—hit me up!
+                </p>
+                <div class="text-center mt-4">
+                  <a href="#tmContact" class="btn btn-primary">Contact Me</a>
+                </div>
               </div>
             </div>
             <!-- Brown bg -->
-            <div class="col-md-5">
-              <div class="tm-welcome-right">
+            <div class="col-md-4">
+              <img src="img/portfolio.jpeg" alt="Image" width="400" class="img-fluid tm-welcome-img" />
+              <!-- <div class="tm-welcome-right">
                 <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
                 <p class="mb-0">
                   Please spread a word about templatemo website. Anyone can download free Bootstrap CSS templates.
                 </p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -70,72 +89,62 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                Project Manager
+                Web App
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
-                  New Company
-                  <span class="tm-title-small">(2019 January to Present)</span>
+                  <a href="https://restaurant-1ukh.onrender.com/#/" style="color: #98cb00;">Restaurant App</a>
+                  <!-- <span class="tm-title-small"></span> -->
                 </h3>
                 <p class="mb-0">
-                  Nullam a tellus ultricies, ornare purus vel, porttitor massa.
-                  Aliquam facilisis purus ac eros sollicidudin, in mollis neque
-                  facilisis. Duis malesuada, mi non elementum malesuada.
+                  A professionally designed web application developed for a restaurant in the UK, enabling waiters to browse menus to place orders, track deliveries efficiently, track payments and issue reports. The interface is intuitive, supported by a robust back-end to manage high demand seamlessly.
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                Senior UX Designer
+                Desktop App
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
-                  Studio One
-                  <span class="tm-title-small">(2017 April to 2018 Dec)</span>
+                  <a href="https://github.com/Code-ed381/Sales-App" style="color: #cc6733;">Sales App</a> 
+                  <!-- <span class="tm-title-small">()</span> -->
                 </h3>
                 <p class="mb-0">
-                  Phasellus ac nulla egestas, malesuada dolor quis, scelerisque
-                  arcu. Morbi aliquam, nunc vel blandit mattis, sapien nisl
-                  convallis sem, quis hendrerit nisl tellus in lectus. Proin at
-                  nibh bibendum, tincidunt mauris sit amet, porta risus. Integer
-                  id malesuada ligula.
+                  This desktop application assists businesses in managing inventory and sales with precision. It features real-time updates and detailed reporting, designed to enhance organizational efficiency across various operations. 
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                Graphic Designer
+                Website
               </div>
               <div class="tm-portfolio-description">
-                <h3 class="tm-text-blue">
-                  Digital Com
-                  <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
+                <h3 class="tm-text-blue" style="color: #3398cc;">
+                  H.E.L.P. NGO Website***
+                  <!-- <span class="tm-title-small">(Not Confirmed)</span> -->
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  A website created for an NGO, featuring a clean design and user-friendly navigation to promote their mission. It is engineered to facilitate donations and volunteers, with development ongoing to ensure maximum impact.
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                Design School
+                Additional Projects
               </div>
               <div class="tm-portfolio-description">
-                <h3 class="tm-text-dark-gray">
-                  Art Design College
-                  <span class="tm-title-small">
-                    (2012 May to 2014 Dec)
-                  </span>
+                <h3 class="tm-text-dark-gray" >
+                  <a href="http://github.com/Code-ed381">Unhosted Works and More</a> 
+                  <!-- <span class="tm-title-small">
+                    (https://)
+                  </span> -->
                 </h3>
                 <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
+                  This category includes a range of projects not publicly hosted. Some were developed under NDAs, restricting their display, while others are personal experiments I’ve explored on my own. Additionally, there are projects that were abandoned due to client non-payment or fell off due to shifting priorities, showcasing the full scope of my experience.
                 </p>
               </div>
             </div>
@@ -154,21 +163,20 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  Quisque venenatis viverra ultrices. Lorem ipsum dolor sit
-                  amet. Nullam sit amet tempor nisl.
+                  Hailing from Accra, I’m all about getting it done right and on time. I adapt to your needs, adding a fresh spark to every project—your vision, my commitment.
                 </p>
               </div>
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  You can absolutely feel free to use Mini Profile for your web page or any usage for your website.
+                  With 4 years of building apps, websites, and more—plus time at AJXT - Technology & Agriculture and Openlabs IT School—I turn your ideas into smooth, solid work with a Ghanaian vibe.
                 </p>
               </div>
 
               <div class="tm-contact-item">
                 <i class="fas fa-5x fa-balance-scale tm-contact-item-icon"></i>
                 <p class="mb-0">
-                  You are NOT allowed to re-distribute this template in any download website. Else, it is illegal action.
+                  My prices won’t break your pocket, but the quality? Top-notch. You get dope, user-friendly results that feel like a steal—pure value with every job.
                 </p>
               </div>
             </div>
@@ -227,10 +235,27 @@ https://templatemo.com/tm-530-mini-profile
         <!-- row -->
         <div class="row">
           <footer class="col-12">
+            <div class="text-center mb-4">
+              <a href="https://facebook.com" target="_blank" class="tm-social-icon">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="https://twitter.com" target="_blank" class="tm-social-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="https://instagram.com" target="_blank" class="tm-social-icon">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="https://linkedin.com" target="_blank" class="tm-social-icon">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="https://github.com" target="_blank" class="tm-social-icon">
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
             <p class="text-center tm-copyright-text">
-            Copyright 2020 Mini Profile Page 
-            
-            - Design: Template Mo</p>
+              Copyright 2025 Edwin Adjei
+              - Design: Code Ed
+            </p>
           </footer>
         </div>
       </div>
