style: adjust welcome section margin and comment out phone input in contact form

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ https://templatemo.com/tm-530-mini-profile
                   required
                 />
               </div>
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <input
                   type="text"
                   id="contact_phone"
@@ -221,7 +221,7 @@ https://templatemo.com/tm-530-mini-profile
                   value="0542020730"
                   readonly
                 />
-              </div>
+              </div> -->
               <div class="form-group">
                 <textarea
                   rows="4"
@@ -265,7 +265,7 @@ https://templatemo.com/tm-530-mini-profile
             </div>
             <p class="text-center tm-copyright-text">
               Copyright 2025 Edwin Adjei
-              - Design: Code Ed
+              - Design: Code Ed - 0542020730
             </p>
           </footer>
         </div>
