style: update welcome section background image and enhance layout for responsiveness; refine developer description

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ https://templatemo.com/tm-530-mini-profile
   </head>
   <body>
     <!-- Welcome Section -->
-    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/mini-profile-bg-01.jpg">
+    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/pakata-goh-EJMTKCZ00I0-unsplash.jpg">
       <div class="container-fluid tm-brand-container-outer">
         <div class="row">
           <div class="col-12">
@@ -59,10 +59,11 @@ https://templatemo.com/tm-530-mini-profile
               <div class="tm-welcome-left">
                 <h2 class="tm-welcome-title">Mastery in Motion: My Portfolio</h2>
                 <p class="pb-0">
-                  Hey, I’m a full-stack developer with 4 years of freelancing, building cool apps, websites, and more with JavaScript (TypeScript, React, Next, Electron, React Native, Node/Express), Python (Tkinter, PyQt6, Django), and databases like MongoDB, Supabase, and SQL—plus Git and GitHub for version control. I work part-time at AJXT - Technology & Agriculture and once mentored coders as Assistant Academic Head at Openlabs IT School. From a creative vibe, I craft user-friendly tech that turns your ideas into reality. I charge fair, deliver big, and enjoy Afrobeat when I’m not coding. Let’s create something dope—hit me up!
+                  I’m a full-stack developer with 4 years of freelancing, building cool apps, websites, and more with JavaScript (TypeScript, React, Next, Electron, React Native, Node/Express), Python (Tkinter, PyQt6, Django), and databases like MongoDB, Supabase, and SQL—plus Git and GitHub for version control. I work part-time at AJXT - Technology & Agriculture and once mentored coders as Assistant Academic Head at Openlabs Ghana, an IT school in Accra. From a creative vibe, I craft user-friendly tech that turns your ideas into reality. I charge fair but deliver big. Let’s create something dope—hit me up!
                 </p>
                 <div class="text-center mt-4">
                   <a href="#tmContact" class="btn btn-primary">Contact Me</a>
+                  <a href="docs/CV new.pdf" class="btn btn-secondary" download>Download CV</a>
                 </div>
               </div>
             </div>
