style: update NGO website link and adjust text color for better visibility

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@ https://templatemo.com/tm-530-mini-profile
                 Website
               </div>
               <div class="tm-portfolio-description">
-                <h3 class="tm-text-blue" style="color: #3398cc;">
-                  H.E.L.P. NGO Website***
+                <h3 class="tm-text-blue">
+                  <a href="https://helpfeedthechildrenfoundation.com/" style="color: #3398cc;">H.E.L.P. Feed The Children Foundation NGO Website</a> 
+                  
                   <!-- <span class="tm-title-small">(Not Confirmed)</span> -->
                 </h3>
                 <p class="mb-0">
@@ -139,7 +140,7 @@ https://templatemo.com/tm-530-mini-profile
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray" >
-                  <a href="http://github.com/Code-ed381">Unhosted Works and More</a> 
+                  <a href="http://github.com/Code-ed381" style="color: #898989;">Unhosted Works and More</a> 
                   <!-- <span class="tm-title-small">
                     (https://)
                   </span> -->
